Project migrated to Java 9